# spe

./: .gitignore  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
cmake/apple-sdk-shims/Foundation/: NSGarbageCollector.h
releases/V01.00/: readme.md
source/: PluginProcessor.cpp  PluginProcessor.h
